# opencv-opencl-use-after-free

./: CMakeLists.txt  demo  demo.cpp
